--- a/page3/index.html
+++ b/page3/index.html
@@ -11,7 +11,9 @@
         <div class="container">
             <div class="wrapper">
                 <div class="c-item-01">
-                    <svg class="switch" onclick="switchMode()" width="43" height="23" viewBox="0 0 43 23" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <svg onclick="switchMode()" 
+                        id="hamburger-menu"
+                         width="43" height="23" viewBox="0 0 43 23" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1H28.7353" stroke="black" stroke-width="2" stroke-linecap="square"/>
                         <path d="M1 11.8528H42" stroke="black" stroke-width="2" stroke-linecap="square"/>
                         <path d="M1 21.5H20.2941" stroke="black" stroke-width="2" stroke-linecap="square"/>
@@ -20,9 +22,9 @@
                     <p>Menu</p>
                 </div>
                 <div class="c-item-02">
-                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg  id="search" width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15.4424 16.0156L20.4377 20.5209" stroke="black" stroke-width="2" />
-                        <circle cx="9.94904" cy="9.50993" r="8.5" transform="rotate(0.0599245 9.94904 9.50993)" stroke="black"
+                        <circle cx="9.94904" cy="9.50993" id="myCircle" r="8.5" transform="rotate(0.0599245 9.94904 9.50993)" stroke="black"
                             stroke-width="2" />
                     </svg>
         
@@ -57,6 +59,7 @@
             </div>
         </div>
     </header>
+
 
     <div class="container tab">
             Home <span><svg width="7" height="6" viewBox="0 0 7 6" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -268,4 +271,5 @@
     </footer>
 
 </body>
+<script src="../app.js"></script>
 </html>
