p-m-button done again

--- a/page3/index.html
+++ b/page3/index.html
@@ -7,6 +7,7 @@
     <title>Page3</title>
 </head>
 <body>
+    
     <header>
         <div class="container">
             <div class="wrapper">
@@ -31,6 +32,7 @@
                     <div class="vector"></div>
                     <p>Search</p>
                 </div>
+                <svg onclick="switchMode()"  stroke="currentColor" fill="none" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
                 <div class="c-item-03">
                     <svg width="99" height="63" viewBox="0 0 99 64" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_1_205)">
@@ -76,7 +78,7 @@
         <section class="section3-1">
             <div class="container">
                 <div class="wrapper">
-                    <h1 class="main-title">Lewis <br> Rinaudo Cohen</h1>
+                    <h1 >Lewis <br> Rinaudo Cohen</h1>
                 <div class="person-info">
                     <img src="../images/Rectangle 1306 (2).png" alt="" >
                     <div class="social-info">
@@ -95,9 +97,12 @@
         <section class="section3-2">
             <div class="container">
                 <div class="content">
-                    <h3 class="left-bar side-title">
-                        Biography
-                    </h3>
+                    <div class="left-bar">
+                        <h2 class="side-title">
+                            Biography
+                        </h2>
+                    </div>
+                    
                     <div class="right-bar main-text">
                         <p>
                             focuses his practice on the use of blockchain and tokenization across all aspects of the capital markets. Over a 20+ year career, Lewis’ experience has spanned everything from large-scale initial public offerings to the funding of start-ups, with a particular focus on securitizations and other complex structured financings. Lewis has represented issuers, underwriters, banks and others on a wide range of transactions around the globe. With the emergence of blockchain technology, Lewis early on identified the important role this technology would play across the financial markets and virtually all aspects of the commercial landscape and committed his time to advising clients in this area. Lewis is a frequent public speaker on the topic of blockchain and the financial markets and was recently named in “Band 1” as one of three top-ranked lawyers in the blockchain space in the United States by leading independent firm, Chambers & Partners. Prior to DLx Law, Lewis was a partner in the New York office of two of the Global 25 law firms. Lewis graduated from Clark University, cum laude, with a B.A. in Philosophy and went on to Yeshiva University Cardozo School of Law where he received his J.D.
@@ -110,9 +115,11 @@
         <section class="section3-3">
             <div class="container">
                 <div class="content">
-                    <h3 class="left-bar side-title">
-                        Related Contet
-                    </h3>
+                    <div class="left-bar">
+                        <h3 class="side-title">
+                            Related Contet
+                        </h3>
+                    </div>
                 <div class="right-bar">
                         <div class="c-wrapper">
                             <div class="card-brand">
